fix: dark mode qualifier bg

--- a/darkMode.css
+++ b/darkMode.css
@@ -66,7 +66,7 @@ body .textarea_holder textarea,
   background-color: var(--theme-dark-bg-color);
   border: 1px solid rgba(255, 255, 255, 0.12);
 }
-.m_qualifier {
+.q_freestyle {
   background: #5f5f5f;
 }
 /* 通知器 */
@@ -113,7 +113,7 @@ body .textarea_holder textarea,
 ._lch_ ~ .pop-window .plurk_box .mini_form {
   border-color: #525252;
 }
-._lch_ ~ .pop-window .m_qualifier {
+._lch_ ~ .pop-window .q_freestyle {
   background: #5f5f5f;
 }
 :is(url({)),
